--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -7,7 +7,9 @@ html, body {
     padding: 0;
     height: 100dvh;
     width: 100dvw;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     overflow: hidden;
 }
 
